<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BuscarMoneda">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aladin"
        android:padding="25dp"
        android:text="@string/BuscarMonedaT"
        android:textAlignment="center"
        android:textSize="34sp" />

    <RadioButton
        android:id="@+id/RadioGMonedas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aladin"
        android:text="@string/RadioMo1" />

    <RadioButton
        android:id="@+id/RadioGMonedas2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aladin"
        android:text="@string/RadioMo2" />

    <RadioButton
        android:id="@+id/RadioGMonedas3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aladin"
        android:text="@string/RadioMo3" />

    <RadioButton
        android:id="@+id/RadioGMonedas4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aladin"
        android:text="@string/RadioMo4" />

    <ImageButton
        android:id="@+id/ImagenMoneda"
        android:layout_width="370dp"
        android:layout_height="284dp"
        android:layout_gravity="center"
        android:contentDescription="@string/decrMoneda"
        app:srcCompat="@drawable/image" />

    <TextView
        android:id="@+id/DescrBusc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aladin"
        android:gravity="center"
        android:text="@string/decrMoneda"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Regresarbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aladin"
        android:text="@string/buttonRegresar" />
</LinearLayout>