<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<!--
    <item
        android:id="@+id/menu"
        android:title="@string/menu"
        android:icon="@drawable/baseline_menu_book_24"
        app:showAsAction="ifRoom"

        /> -->
    <item
        android:id="@+id/camara"
        android:title="@string/camara"
        android:icon="@drawable/baseline_camera_24"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/buscar"
        android:title="@string/buscar"
        android:icon="@drawable/baseline_manage_search_24"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />
    <item
        android:id="@+id/confi"
        android:title="@string/confi"
        android:icon="@drawable/baseline_settings_24"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/acerc"
        android:title="@string/acerc"

        app:showAsAction="ifRoom"
        />



</menu>